fix: about-me-header align text

--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ p {
 
 .about-me-header {
     background-color: lightgreen;
-    padding-left: 10px;
-    text-align: right;   
+    padding-left: 10px;     
 }
 
 .skills-header {
